@@ -5,9 +5,11 @@ plugins {
 }
 
 // Add a configuration(for our migrations(tasks defined below to encapsulate their dependencies)
-val migrations by configurations.creating {
+val migrations: Configuration by configurations.creating {
   extendsFrom(configurations.getByName("implementation"))
 }
+
+val envVars = mapOf("VERSION" to "dev")
 
 configurations.all {
   exclude(group = "io.micronaut.flyway")
@@ -58,10 +60,21 @@ dependencies {
   testImplementation(libs.json.assert)
 }
 
+tasks.named<Test>("test") {
+  jvmArgs(
+    listOf(
+      // Required to use junit-pioneer @SetEnvironmentVariable
+      "--add-opens=java.base/java.util=ALL-UNNAMED",
+      "--add-opens=java.base/java.lang=ALL-UNNAMED",
+    ),
+  )
+}
+
 tasks.register<JavaExec>("newConfigsMigration") {
   mainClass = "io.airbyte.db.instance.development.MigrationDevCenter"
   classpath = files(migrations.files)
   args = listOf("configs", "create")
+  environment = envVars
   dependsOn(":oss:airbyte-db:db-lib:build")
 }
 
@@ -69,6 +82,7 @@ tasks.register<JavaExec>("runConfigsMigration") {
   mainClass = "io.airbyte.db.instance.development.MigrationDevCenter"
   classpath = files(migrations.files)
   args = listOf("configs", "migrate")
+  environment = envVars
   dependsOn(":oss:airbyte-db:db-lib:build")
 }
 
@@ -76,6 +90,7 @@ tasks.register<JavaExec>("dumpConfigsSchema") {
   mainClass = "io.airbyte.db.instance.development.MigrationDevCenter"
   classpath = files(migrations.files)
   args = listOf("configs", "dump_schema")
+  environment = envVars
   dependsOn(":oss:airbyte-db:db-lib:build")
 }
 
@@ -83,6 +98,7 @@ tasks.register<JavaExec>("newJobsMigration") {
   mainClass = "io.airbyte.db.instance.development.MigrationDevCenter"
   classpath = files(migrations.files)
   args = listOf("jobs", "create")
+  environment = envVars
   dependsOn(":oss:airbyte-db:db-lib:build")
 }
 
@@ -90,6 +106,7 @@ tasks.register<JavaExec>("runJobsMigration") {
   mainClass = "io.airbyte.db.instance.development.MigrationDevCenter"
   classpath = files(migrations.files)
   args = listOf("jobs", "migrate")
+  environment = envVars
   dependsOn(":oss:airbyte-db:db-lib:build")
 }
 
@@ -97,15 +114,18 @@ tasks.register<JavaExec>("dumpJobsSchema") {
   mainClass = "io.airbyte.db.instance.development.MigrationDevCenter"
   classpath = files(migrations.files)
   args = listOf("jobs", "dump_schema")
+  environment = envVars
   dependsOn(":oss:airbyte-db:db-lib:build")
 }
 
-val copyInitSql = tasks.register<Copy>("copyInitSql") {
-  from("src/main/resources") {
-    include("init.sql")
+val copyInitSql =
+  tasks.register<Copy>("copyInitSql") {
+    from("src/main/resources") {
+      include("init.sql")
+      include("airbyte-entrypoint.sh")
+    }
+    into("build/airbyte/docker/bin")
   }
-  into("build/airbyte/docker/bin")
-}
 
 tasks.named("dockerCopyDistribution") {
   dependsOn(copyInitSql)
